zig/gme.zig


	extern fn gme_mute_voice(*Self, index: c_int, mute: c_int) void;
	pub fn muteVoice(self: *Self, index: u32, mute: bool) void {
		gme_mute_voice(self, @intCast(index), @intFromBool(mute));
	}

	extern fn gme_mute_voices(*Self, muting_mask: c_uint) void;
	/// Mute/unmute voice i, where voice 0 is first voice.
	pub fn muteVoices(self: *Self, muting_mask: u32) void {
		gme_mute_voices(self, @intCast(muting_mask));
	}

	extern fn gme_disable_echo(*Self, disable: c_int) void;
	/// Disable/Enable echo effect for SPC files.
	pub fn disableEcho(self: *Self, disable: bool) void {
		gme_disable_echo(self, @intFromBool(disable));
	}

	extern fn gme_enable_accuracy(*Self, enabled: c_int) void;
	/// Enables/disables most accurate sound emulation options.
	pub fn enableAccuracy(self: *Self, enabled: bool) void {
		gme_enable_accuracy(self, @intFromBool(enabled));
	}

	extern fn gme_multi_channel(*const Self) c_int;
	/// whether the pcm output retrieved by gme_play() will have all 8 voices
	/// rendered to their individual stereo channel or (if false) these voices
	/// get mixed into one single stereo channel.
	pub fn isMultiChannel(self: *const Self) bool {
		return (gme_multi_channel(self) != 0);
	}

	extern fn gme_load_file(*Self, path: [*:0]const u8) ErrMsg;
	/// Load music file into emulator.
	pub fn loadFile(self: *Self, path: [*:0]const u8) Error!void {
		if (gme_load_file(self, path) != null)
			return Error.LoadFile;
	}

	extern fn gme_load_data(*Self, data: *const anyopaque, size: c_long) ErrMsg;
	/// Load music file from memory into emulator. Makes a copy of data passed.
	pub fn loadData(self: *Self, data: []const anyopaque) Error!void {
		if (gme_load_data(self, data.ptr, data.len) != null)
			return Error.LoadData;
	}

	extern fn gme_load_tracks(*Self,
		data: [*]const u8, sizes: [*]c_long, count: c_uint) ErrMsg;
	/// Load multiple single-track music files from memory into emulator.
	pub fn loadTracks(self: *Self, data: [*]const u8, sizes: []usize) Error!void {
		const result = gme_load_tracks(self,
			data, @ptrCast(sizes.ptr), @intCast(sizes.len));
		if (result != null)
			return Error.LoadTracks;
	}

	extern fn gme_load_custom(*Self,
		Reader, file_size: c_long, your_data: *anyopaque) ErrMsg;
	/// Load music file using custom data reader function that will be called to
	/// read file data. Most emulators load the entire file in one read call.
	pub fn loadCustom(self: *Self, func: Reader, data: []anyopaque) Error!void {
		if (gme_load_custom(self, func, data.len, data.ptr) != null)
			return Error.LoadCustom;
	}

	extern fn gme_load_m3u_data(*Self, data: *const anyopaque, size: c_long) ErrMsg;
	/// Load m3u playlist file from memory (must be done after loading music).
	pub fn loadM3uData(self: *Self, data: []const anyopaque) Error!void {
		if (gme_load_m3u_data(self, data.ptr, data.len) != null)
			return Error.LoadM3uData;
	}
};
